# FrenetCoordinateSystem

./: README.md  disable_cpu_scaling.sh  main.cpp
benchmark/: CMakeLists.txt  main.cpp
benchmark/frenet_coordinate_system/: data_process.py  frenet_coordinate_main.cpp  frenet_coordinate_main.h  frenet_coordinate_system.cpp  frenet_coordinate_system.h  frenet_coordinate_system_new.cpp
benchmark/utils/: lane.hpp  line_segment2d.cc  spline.h  vec2d.h
benchmark/utils/spline/: polynomial.hpp  spline.hpp  spline_generator.hpp
frenet_coordinate_system/: data_x.txt  data_y.txt  frenet_coordinate_main.cpp  frenet_coordinate_main.h  frenet_coordinate_system_new.h
utils/: cartesian_frenet_conversion.cc  cartesian_frenet_conversion.h  common_utils.h  geometry.h  line_segment2d.h  math_utils.cc  math_utils.h  spline.cpp  vec2d.cc
utils/qp_solver/: osqp_solver.cpp  osqp_solver.h
